feat(home/hyprland): hypr-dynamic-cursors

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -407,3 +407,13 @@ exec-once = mpd-mpris
 exec-once = playerctld daemon
 exec-once = gnome-keyring-daemon --start
 exec-once = nextcloud --background
+
+# Plugins
+plugin:dynamic-cursors {
+    enabled = true
+    mode    = tilt
+
+    tilt {
+        limit = 4000
+    }
+}
