feat(home/hyprland): hyprscroller

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -88,7 +88,7 @@ general {
     col.inactive_border     = rgba(00000000)
     col.active_border       = $lavender
 
-    layout                  = dwindle
+    layout                  = scroller
 }
 
 decoration {
@@ -202,20 +202,20 @@ bind = SUPERSHIFT,P,exec,hyprctl reload
 
 # Window Management
 # Switching focus
-bind  = SUPER,N,movefocus,l
-bind  = SUPER,E,movefocus,d
-bind  = SUPER,U,movefocus,u
-bind  = SUPER,I,movefocus,r
+bind  = SUPER,N,scroller:movefocus,l
+bind  = SUPER,E,scroller:movefocus,d
+bind  = SUPER,U,scroller:movefocus,u
+bind  = SUPER,I,scroller:movefocus,r
 
 # Moving windows
-bind = SUPERSHIFT,N,movewindoworgroup,l
-bind = SUPERSHIFT,E,movewindoworgroup,d
-bind = SUPERSHIFT,U,movewindoworgroup,u
-bind = SUPERSHIFT,I,movewindoworgroup,r
+bind = SUPERSHIFT,N,scroller:movewindow,l
+bind = SUPERSHIFT,E,scroller:movewindow,d
+bind = SUPERSHIFT,U,scroller:movewindow,u
+bind = SUPERSHIFT,I,scroller:movewindow,r
 
 # Managing tiling
-bind = SUPER,     B,layoutmsg,togglesplit
-bind = SUPERSHIFT,B,layoutmsg,swapsplit
+bind = SUPER,     B,scroller:setmode,row
+bind = SUPERSHIFT,B,scroller:setmode,column
 bind = SUPER,     G,togglegroup
 bind = SUPERSHIFT,G,lockactivegroup,toggle
 
@@ -238,6 +238,9 @@ bind  = SUPERCTRL,0,changegroupactive,10
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
 
+# Overview
+bind = SUPER,tab,scroller:toggleoverview
+
 # Close window
 bind = SUPER,D,killactive
 # Force-kill window
@@ -254,7 +257,7 @@ bind = SUPER,     T,fullscreen,     0
 bind = SUPERSHIFT,T,togglefloating
 bind = SUPERALT,  T,fullscreenstate,-1 2
 
-# Resizing windows (submap)
+# Resizing windows
 bind   = SUPER,P,submap,resize
 
 submap = resize
@@ -267,7 +270,37 @@ binde = SHIFT,N,resizeactive,-20 0
 binde = SHIFT,E,resizeactive,0 20
 binde = SHIFT,U,resizeactive,0 -20
 binde = SHIFT,I,resizeactive,20 0
+
+bind = ,M,scroller:fitsize,active
+bind = ,M,submap,reset
+bind = ,V,scroller:fitsize,visible
+bind = ,V,submap,reset
+bind = ,A,scroller:fitsize,all
+bind = ,A,submap,reset
+
 bind  = ,escape,submap,reset
+
+submap = reset
+
+# Changing row/column size
+bind = SUPER,V,scroller:cyclesize,next
+
+# Column alignment
+bind = SUPER,L,submap,align
+
+submap = align
+
+bind = ,N,scroller:alignwindow,left
+bind = ,N,submap,reset
+bind = ,E,scroller:alignwindow,down
+bind = ,E,submap,reset
+bind = ,U,scroller:alignwindow,up
+bind = ,U,submap,reset
+bind = ,I,scroller:alignwindow,right
+bind = ,I,submap,reset
+bind = ,comma,scroller:alignwindow,center
+bind = ,comma,submap,reset
+bind = ,catchall,submap,reset
 
 submap = reset
 
@@ -416,4 +449,11 @@ plugin:dynamic-cursors {
     tilt {
         limit = 4000
     }
+}
+
+plugin:hyprscroller {
+    column_default_width  = twothirds
+    window_default_Height = twothirds
+    column_widths         = onesixth onethird onehalf twothirds one
+    window_heights        = onesixth onethird onehalf twothirds one
 }
