fix(home/hyprland): plugin config

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -442,18 +442,20 @@ exec-once = gnome-keyring-daemon --start
 exec-once = nextcloud --background
 
 # Plugins
-plugin:dynamic-cursors {
-    enabled = true
-    mode    = tilt
-
-    tilt {
-        limit = 4000
+plugin {
+    dynamic-cursors {
+        enabled = true
+        mode    = tilt
+    
+        tilt {
+            limit = 4000
+        }
     }
-}
-
-plugin:hyprscroller {
-    column_default_width  = twothirds
-    window_default_Height = twothirds
-    column_widths         = onesixth onethird onehalf twothirds one
-    window_heights        = onesixth onethird onehalf twothirds one
+    
+    scroller {
+        column_default_width  = twothirds
+        window_default_height = one
+        column_widths         = onethird onehalf twothirds one
+        window_heights        = onethird onehalf twothirds one
+    }
 }
