feat(home/emacs): popup minibuffer

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -423,6 +423,10 @@ windowrulev2 = float,       class:ncmpcpp
 windowrulev2 = size 80% 80%,class:ncmpcpp
 windowrulev2 = center,      class:ncmpcpp
 
+windowrulev2 = float,class:emacs,title:MINIBUFFER
+windowrulev2 = workspace special:minibuffer silent,class:emacs,title:MINIBUFFER
+windowrulev2 = size 80% 60%,class:emacs,title:MINIBUFFER
+
 # Blur AGS widgets
 layerrule = blur,bar
 layerrule = blur,music
