feat(home/hyprland): adapt scroller binds

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -202,10 +202,12 @@ bind = SUPERSHIFT,P,exec,hyprctl reload
 
 # Window Management
 # Switching focus
-bind  = SUPER,N,scroller:movefocus,l
-bind  = SUPER,E,scroller:movefocus,d
-bind  = SUPER,U,scroller:movefocus,u
-bind  = SUPER,I,scroller:movefocus,r
+bind = SUPER,N,scroller:movefocus,l
+bind = SUPER,E,scroller:movefocus,d
+bind = SUPER,U,scroller:movefocus,u
+bind = SUPER,I,scroller:movefocus,r
+bind = SUPER,B,scroller:movefocus,begin
+bind = SUPER,F,scroller:movefocus,end
 
 # Moving windows
 bind = SUPERSHIFT,N,scroller:movewindow,l
@@ -214,32 +216,14 @@ bind = SUPERSHIFT,U,scroller:movewindow,u
 bind = SUPERSHIFT,I,scroller:movewindow,r
 
 # Managing tiling
-bind = SUPER,     B,scroller:setmode,row
-bind = SUPERSHIFT,B,scroller:setmode,column
-bind = SUPER,     G,togglegroup
-bind = SUPERSHIFT,G,lockactivegroup,toggle
-
-# Group focus
-bind  = SUPER,     L,changegroupactive,b
-bind  = SUPERSHIFT,L,movegroupwindow,b
-bind  = SUPER,     Y,changegroupactive,f
-bind  = SUPERSHIFT,Y,movegroupwindow,f
-bind  = SUPERCTRL,1,changegroupactive,1
-bind  = SUPERCTRL,2,changegroupactive,2
-bind  = SUPERCTRL,3,changegroupactive,3
-bind  = SUPERCTRL,4,changegroupactive,4
-bind  = SUPERCTRL,5,changegroupactive,5
-bind  = SUPERCTRL,6,changegroupactive,6
-bind  = SUPERCTRL,7,changegroupactive,7
-bind  = SUPERCTRL,8,changegroupactive,8
-bind  = SUPERCTRL,9,changegroupactive,9
-bind  = SUPERCTRL,0,changegroupactive,10
+bind = SUPER,bracketleft, scroller:setmode,       row
+bind = SUPER,bracketright,scroller:setmode,       column
+bind = SUPER,tab,         scroller:toggleoverview
+bind = SUPER,L,           scroller:admitwindow
+bind = SUPER,Y,           scroller:expelwindow
 
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
-
-# Overview
-bind = SUPER,tab,scroller:toggleoverview
 
 # Close window
 bind = SUPER,D,killactive
@@ -283,7 +267,8 @@ bind  = ,escape,submap,reset
 submap = reset
 
 # Changing row/column size
-bind = SUPER,V,scroller:cyclesize,next
+bind = SUPER,minus,scroller:cyclesize,prev
+bind = SUPER,equal,scroller:cyclesize,next
 
 # Column alignment
 bind = SUPER,L,submap,align
