feat(home/hyprland): hyprfocus

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -439,6 +439,23 @@ plugin {
             limit = 4000
         }
     }
+
+    hyprfocus {
+        enabled                 = yes
+        animate_floating        = yes
+        animate_workspacechange = yes
+        focus_animation         = flash
+
+        # Taken from README example
+        bezier = realsmooth,0.28,0.29,.69,1.08
+        flash {
+            flash_opacity = 0.7
+            in_speed = 1.0
+            in_bezier = realsmooth
+            out_speed = 2.0
+            out_bezier = realsmooth
+        }
+    }
     
     scroller {
         column_default_width  = twothirds
