feat(home/hyprland): detach mouse focus from keyboard
Focus-on-hover is quite jarring with hyprscroller, since moving the mouse around
can cause windows to also jump around.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -143,6 +143,9 @@ animations {
 }
 
 input {
+    # Separate keyboard/mouse focus
+    follow_mouse  = 3
+
     kb_layout     = us
     kb_variant    = colemak_dh
 
