feat(home/hyprland): enable tearing + set resize corner

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -88,6 +88,9 @@ general {
     col.inactive_border     = rgba(00000000)
     col.active_border       = $lavender
 
+    resize_corner           = 3
+    allow_tearing           = true
+
     layout                  = scroller
 }
 
@@ -414,6 +417,8 @@ windowrulev2 = center,      class:ncmpcpp
 windowrulev2 = float,class:emacs,title:MINIBUFFER
 windowrulev2 = workspace special:minibuffer silent,class:emacs,title:MINIBUFFER
 windowrulev2 = size 80% 60%,class:emacs,title:MINIBUFFER
+
+windowrulev2 = immediate,class:(tetrio-desktop)
 
 # Blur AGS widgets
 layerrule = blur,bar
