feat(home/hyprland): bind tobeg/toend fitsize dispatchers

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -261,12 +261,16 @@ binde = SHIFT,E,resizeactive,0 20
 binde = SHIFT,U,resizeactive,0 -20
 binde = SHIFT,I,resizeactive,20 0
 
-bind = ,M,scroller:fitsize,active
-bind = ,M,submap,reset
-bind = ,V,scroller:fitsize,visible
-bind = ,V,submap,reset
-bind = ,A,scroller:fitsize,all
-bind = ,A,submap,reset
+bind = ,M,           scroller:fitsize,active
+bind = ,M,           submap,reset
+bind = ,V,           scroller:fitsize,visible
+bind = ,V,           submap,reset
+bind = ,A,           scroller:fitsize,all
+bind = ,A,           submap,reset
+bind = ,bracketleft, scroller:fitsize,tobeg
+bind = ,bracketleft, submap,reset
+bind = ,bracketright,scroller:fitsize,toend
+bind = ,bracketright,submap,reset
 
 bind  = ,escape,submap,reset
 
