--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -319,29 +319,29 @@ bind = SUPER,comma ,workspace,r-1
 bind = SUPER,period,workspace,r+1
 bind = SUPER,K,workspace,empty
 # Move window to workspaces
-bind = SUPERSHIFT,exclam,     movetoworkspace,1
-bind = SUPERSHIFT,at,         movetoworkspace,2
-bind = SUPERSHIFT,numbersign, movetoworkspace,3
-bind = SUPERSHIFT,dollar,     movetoworkspace,4
-bind = SUPERSHIFT,percent,    movetoworkspace,5
-bind = SUPERSHIFT,asciicircum,movetoworkspace,6
-bind = SUPERSHIFT,ampersand,  movetoworkspace,7
-bind = SUPERSHIFT,asterisk,   movetoworkspace,8
-bind = SUPERSHIFT,parenleft,  movetoworkspace,9
-bind = SUPERSHIFT,parenright, movetoworkspace,10
-bind = SUPERSHIFT,less,       movetoworkspace,r-1
-bind = SUPERSHIFT,greater,    movetoworkspace,r+1
-bind = SUPERSHIFT,K,          movetoworkspace,empty
+bind = SUPERSHIFT,1,     movetoworkspace,1
+bind = SUPERSHIFT,2,     movetoworkspace,2
+bind = SUPERSHIFT,3,     movetoworkspace,3
+bind = SUPERSHIFT,4,     movetoworkspace,4
+bind = SUPERSHIFT,5,     movetoworkspace,5
+bind = SUPERSHIFT,6,     movetoworkspace,6
+bind = SUPERSHIFT,7,     movetoworkspace,7
+bind = SUPERSHIFT,8,     movetoworkspace,8
+bind = SUPERSHIFT,9,     movetoworkspace,9
+bind = SUPERSHIFT,0,     movetoworkspace,10
+bind = SUPERSHIFT,comma, movetoworkspace,r-1
+bind = SUPERSHIFT,period,movetoworkspace,r+1
+bind = SUPERSHIFT,K,     movetoworkspace,empty
 
 # Special workspace
-bind = SUPER,     slash,   togglespecialworkspace
-bind = SUPERSHIFT,question,movetoworkspace,special
+bind = SUPER,     slash,togglespecialworkspace
+bind = SUPERSHIFT,slash,movetoworkspace,special
 
 # Screen locking
-bind  = SUPER,     grave,      exec,hyprlock --immediate & sleep 0.5 && hyprctl dispatch dpms off
-bind  = SUPERSHIFT,asciitilde, exec,hyprlock --immediate & systemctl suspend
-bindl = SUPER,     escape,     exec,sleep 0.5 && hyprctl dispatch dpms off
-bindl = SUPERSHIFT,escape,     exec,sleep 0.5 && hyprctl dispatch dpms on
+bind  = SUPER,     grave, exec,hyprlock --immediate & sleep 0.5 && hyprctl dispatch dpms off
+bind  = SUPERSHIFT,grave, exec,hyprlock --immediate & systemctl suspend
+bindl = SUPER,     escape,exec,sleep 0.5 && hyprctl dispatch dpms off
+bindl = SUPERSHIFT,escape,exec,sleep 0.5 && hyprctl dispatch dpms on
 
 # Screenshots
 bind =      ,print,exec,hyprshot --clipboard-only -m region
