fix(home/hyprland): use workspace rules for no_gaps_when_only
This is the new, correct way to do it now (https://wiki.hyprland.org/Configuring/Workspace-Rules/#smart-gaps).

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -122,7 +122,6 @@ dwindle {
     preserve_split       = true
     
     special_scale_factor = 0.95
-    no_gaps_when_only    = 2    # with border
     
     smart_resizing       = false
     default_split_ratio  = 1.1
@@ -427,6 +426,9 @@ windowrulev2 = immediate,class:(tetrio-desktop)
 # Blur AGS widgets
 layerrule = blur,bar
 layerrule = blur,music
+
+# Workspace rules
+workspace = w[tg1],gapsout:0,border:2,rounding:0
 
 # Startup applications
 #
