fix(home/hyprland): bind XF86AudioPause
Apparently one of my headphones actually alternates between using this key and
XF86AudioPlay. However, since my keyboards only send XF86AudioPlay, I'm just
going to make them both toggle playback.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -348,9 +348,10 @@ bind = SHIFT,print,exec,hyprshot --clipboard-only -m window
 bind = CTRL ,print,exec,hyprshot --clipboard-only -m output
 
 # Media controls
-bindl = ,xf86audioplay,exec,playerctl play-pause
-bindl = ,xf86audioprev,exec,playerctl previous
-bindl = ,xf86audionext,exec,playerctl next
+bindl = ,xf86audioplay, exec,playerctl play-pause
+bindl = ,xf86audiopause,exec,playerctl play-pause
+bindl = ,xf86audioprev, exec,playerctl previous
+bindl = ,xf86audionext, exec,playerctl next
 
 # Brightness
 bindle = ,     xf86monbrightnessdown,exec,brightnessctl set 1000-
