fix(home/hyprland): conflicting bind from hyprscroller

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -212,7 +212,7 @@ bind = SUPER,E,scroller:movefocus,d
 bind = SUPER,U,scroller:movefocus,u
 bind = SUPER,I,scroller:movefocus,r
 bind = SUPER,B,scroller:movefocus,begin
-bind = SUPER,F,scroller:movefocus,end
+bind = SUPER,J,scroller:movefocus,end
 
 # Moving windows
 bind = SUPERSHIFT,N,scroller:movewindow,l
