fix(home/hyprland): new shadow option

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -97,9 +97,11 @@ general {
 decoration {
     rounding    = 0
 
-    drop_shadow = false
-
     dim_special = 0.4
+
+    shadow {
+        enabled = false
+    }
 }
 
 group {
