fix(home/hyprland): use uwsm stop to exit
`uwsm` documentation recommends this instead of using compositor-specific
functionality, since this allows the entire systemd-managed stack to shutdown
fully and in order.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -204,7 +204,7 @@ binds {
 # Keybinds
 #
 # Hyprland
-bind = SUPERSHIFT,X,exit
+bind = SUPERSHIFT,X,exec,uwsm stop
 bind = SUPERSHIFT,P,exec,hyprctl reload
 
 # Window Management
