feat(home/hyprland): launch apps with `uwsm app`
Not very specialized right now, I think some of these are "supposed" to use
services and whatnot instead, but baby steps 🙃.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -202,7 +202,9 @@ binds {
 }
 
 # Keybinds
-#
+
+$run = uwsm app --
+
 # Hyprland
 bind = SUPERSHIFT,X,exec,uwsm stop
 bind = SUPERSHIFT,P,exec,hyprctl reload
@@ -369,22 +371,22 @@ bind = SUPERALT,  Q,exec,makoctl restore
 # Applications
 bindr = SUPER,Super_L,exec,$LAUNCHER
 bindr = SUPER,Super_R,exec,$LAUNCHER
-bind  = SUPER,return ,exec,alacritty msg create-window || alacritty
+bind  = SUPER,return ,exec,alacritty msg create-window || $run alacritty
 
 # Submap for focus-or-open
 bind = SUPER,O,submap,applications
 
 submap = applications
 
-bind = ,B,exec,hyprland-focus-or-open zen-alpha zen
+bind = ,B,exec,$run hyprland-focus-or-open zen-alpha zen
 bind = ,B,submap,reset
 bind = ,K,exec,[size 80% 80%] keepassxc
 bind = ,K,submap,reset
-bind = ,M,exec,alacritty msg create-window --class ncmpcpp -e ncmpcpp || alacritty -e ncmpcpp --class ncmpcpp
+bind = ,M,exec,alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp
 bind = ,M,submap,reset
-bind = ,G,exec,hyprland-focus-or-open signal signal-desktop
+bind = ,G,exec,$run hyprland-focus-or-open signal signal-desktop
 bind = ,G,submap,reset
-bind = ,W,exec,hyprland-focus-or-open WebCord webcord
+bind = ,W,exec,$run hyprland-focus-or-open WebCord webcord
 bind = ,W,submap,reset
 bind = ,catchall,submap,reset
 
@@ -435,13 +437,13 @@ workspace = w[tg1],gapsout:0,border:2,rounding:0
 
 # Startup applications
 #
-exec-once = swaybg -m fill -i ~/nc/pictures/wallpapers/0014.png
-exec-once = ags
-exec-once = [workspace special silent] alacritty
-exec-once = [float] keepassxc
-exec-once = mpd-mpris
-exec-once = playerctld daemon
-exec-once = gnome-keyring-daemon --start
+exec-once = $run swaybg -m fill -i ~/nc/pictures/wallpapers/0014.png
+exec-once = $run ags
+exec-once = [workspace special silent] $run alacritty
+exec-once = [float] $run keepassxc
+exec-once = $run mpd-mpris
+exec-once = $run playerctld daemon
+exec-once = $run gnome-keyring-daemon --start
 
 # Plugins
 plugin {
