fix(home/hyprland): use `uwsm app` for all applications
Whoops, missed some 😅.

Put this commit on the wrong branch and forgot to cherry-pick it 🗿.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -369,8 +369,8 @@ bind = SUPERSHIFT,Q,exec,makoctl dismiss --all
 bind = SUPERALT,  Q,exec,makoctl restore
 
 # Applications
-bindr = SUPER,Super_L,exec,$LAUNCHER
-bindr = SUPER,Super_R,exec,$LAUNCHER
+bindr = SUPER,Super_L,exec,$run $LAUNCHER
+bindr = SUPER,Super_R,exec,$run $LAUNCHER
 bind  = SUPER,return ,exec,alacritty msg create-window || $run alacritty
 
 # Submap for focus-or-open
@@ -380,7 +380,7 @@ submap = applications
 
 bind = ,B,exec,$run hyprland-focus-or-open zen-alpha zen
 bind = ,B,submap,reset
-bind = ,K,exec,[size 80% 80%] keepassxc
+bind = ,K,exec,[size 80% 80%] $run keepassxc
 bind = ,K,submap,reset
 bind = ,M,exec,alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp
 bind = ,M,submap,reset
@@ -397,14 +397,14 @@ bind = SUPER,F,submap,emacs
 
 submap = emacs
 
-bind = SUPER,F,exec,emacsclient -c -a 'emacs'
+bind = SUPER,F,exec,$run emacsclient -c -a 'emacs'
 bind = SUPER,F,submap,reset
 
-bind = ,E,exec,emacsclient -c -e '(mu4e)'
+bind = ,E,exec,$run emacsclient -c -e '(mu4e)'
 bind = ,E,submap,reset
-bind = ,A,exec,emacsclient -c -e '(org-agenda)'
+bind = ,A,exec,$run emacsclient -c -e '(org-agenda)'
 bind = ,A,submap,reset
-bind = ,P,exec,emacsclient -c -e "(call-interactively ##'project-switch-project)"
+bind = ,P,exec,$run emacsclient -c -e "(call-interactively ##'project-switch-project)"
 bind = ,P,submap,reset
 bind = ,catchall,submap,reset
 
