--- a/home/alacritty/theme.toml
+++ b/home/alacritty/theme.toml
@@ -1,77 +1,33 @@
-# https://github.com/catppuccin/alacritty/blob/main/catppuccin-macchiato.toml
+# https://github.com/alacritty/alacritty-theme/blob/master/themes/tomorrow_night.toml
+# Colors (Tomorrow Night)
 
+# Default colors
 [colors.primary]
-background = "#24273a"
-foreground = "#cad3f5"
-dim_foreground = "#8087a2"
-bright_foreground = "#cad3f5"
+background = '#1d1f21'
+foreground = '#c5c8c6'
 
 [colors.cursor]
-text = "#24273a"
-cursor = "#f4dbd6"
+text = '#1d1f21'
+cursor = '#ffffff'
 
-[colors.vi_mode_cursor]
-text = "#24273a"
-cursor = "#b7bdf8"
-
-[colors.search.matches]
-foreground = "#24273a"
-background = "#a5adcb"
-
-[colors.search.focused_match]
-foreground = "#24273a"
-background = "#a6da95"
-
-[colors.footer_bar]
-foreground = "#24273a"
-background = "#a5adcb"
-
-[colors.hints.start]
-foreground = "#24273a"
-background = "#eed49f"
-
-[colors.hints.end]
-foreground = "#24273a"
-background = "#a5adcb"
-
-[colors.selection]
-text = "#24273a"
-background = "#f4dbd6"
-
+# Normal colors
 [colors.normal]
-black = "#494d64"
-red = "#ed8796"
-green = "#a6da95"
-yellow = "#eed49f"
-blue = "#8aadf4"
-magenta = "#f5bde6"
-cyan = "#8bd5ca"
-white = "#b8c0e0"
+black   = '#1d1f21'
+red     = '#cc6666'
+green   = '#b5bd68'
+yellow  = '#e6c547'
+blue    = '#81a2be'
+magenta = '#b294bb'
+cyan    = '#70c0ba'
+white   = '#373b41'
 
+# Bright colors
 [colors.bright]
-black = "#5b6078"
-red = "#ed8796"
-green = "#a6da95"
-yellow = "#eed49f"
-blue = "#8aadf4"
-magenta = "#f5bde6"
-cyan = "#8bd5ca"
-white = "#a5adcb"
-
-[colors.dim]
-black = "#494d64"
-red = "#ed8796"
-green = "#a6da95"
-yellow = "#eed49f"
-blue = "#8aadf4"
-magenta = "#f5bde6"
-cyan = "#8bd5ca"
-white = "#b8c0e0"
-
-[[colors.indexed_colors]]
-index = 16
-color = "#f5a97f"
-
-[[colors.indexed_colors]]
-index = 17
-color = "#f4dbd6"
+black   = '#666666'
+red     = '#ff3334'
+green   = '#9ec400'
+yellow  = '#f0c674'
+blue    = '#81a2be'
+magenta = '#b77ee0'
+cyan    = '#54ced6'
+white   = '#282a2e'
