--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -428,9 +428,8 @@ windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
 
 windowrulev2 = immediate,class:(tetrio-desktop)
 
-# Blur AGS widgets
+# Blur widgets
 layerrule = blur,bar
-layerrule = blur,music
 
 # Workspace rules
 workspace = w[tg1],gapsout:0,border:2,rounding:0
@@ -438,7 +437,6 @@ workspace = w[tg1],gapsout:0,border:2,rounding:0
 # Startup applications
 #
 exec-once = $run swaybg -m fill -i ~/nc/pictures/wallpapers/0014.png
-exec-once = $run ags
 exec-once = [workspace special silent] $run alacritty
 exec-once = [float] $run keepassxc
 exec-once = $run mpd-mpris
