feat(hosts/windstorm): use ddcutil for dpms
My second monitor is broken or something, this makes it actually properly turn
off. Why is it broken? I have no idea ¯\_(ツ)_/¯.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -341,10 +341,10 @@ bind = SUPER,     slash,togglespecialworkspace
 bind = SUPERSHIFT,slash,movetoworkspace,special
 
 # Screen locking
-bind  = SUPER,     grave, exec,hyprlock --immediate & sleep 0.5 && hyprctl dispatch dpms off
+bind  = SUPER,     grave, exec,hyprlock --immediate & sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
 bind  = SUPERSHIFT,grave, exec,hyprlock --immediate & systemctl suspend
-bindl = SUPER,     escape,exec,sleep 0.5 && hyprctl dispatch dpms off
-bindl = SUPERSHIFT,escape,exec,sleep 0.5 && hyprctl dispatch dpms on
+bindl = SUPER,     escape,exec,sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
+bindl = SUPERSHIFT,escape,exec,sleep 0.5 && hyprctl dispatch dpms on $undpmsExtra
 
 # Screenshots
 bind =      ,print,exec,hyprshot --clipboard-only -m region
