feat(home/hyprland): use hypridle to lock on suspend

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -342,7 +342,7 @@ bind = SUPERSHIFT,slash,movetoworkspace,special
 
 # Screen locking
 bind  = SUPER,     grave, exec,hyprlock --immediate & sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
-bind  = SUPERSHIFT,grave, exec,hyprlock --immediate & systemctl suspend
+bind  = SUPERSHIFT,grave, exec,systemctl suspend
 bindl = SUPER,     escape,exec,sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
 bindl = SUPERSHIFT,escape,exec,sleep 0.5 && hyprctl dispatch dpms on $undpmsExtra
 
