feat(home/hyprland): use loginctl to lock

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -341,7 +341,7 @@ bind = SUPER,     slash,togglespecialworkspace
 bind = SUPERSHIFT,slash,movetoworkspace,special
 
 # Screen locking
-bind  = SUPER,     grave, exec,hyprlock --immediate & sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
+bind  = SUPER,     grave, exec,loginctl lock-session && sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
 bind  = SUPERSHIFT,grave, exec,systemctl suspend
 bindl = SUPER,     escape,exec,sleep 0.5 && hyprctl dispatch dpms off $dpmsExtra
 bindl = SUPERSHIFT,escape,exec,sleep 0.5 && hyprctl dispatch dpms on $undpmsExtra
