fix(home/hyprland): conflicting keybinds
How have these been unresolved for this long… 💀.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -225,11 +225,11 @@ bind = SUPERSHIFT,U,scroller:movewindow,u
 bind = SUPERSHIFT,I,scroller:movewindow,r
 
 # Managing tiling
-bind = SUPER,bracketleft, scroller:setmode,       row
-bind = SUPER,bracketright,scroller:setmode,       column
-bind = SUPER,tab,         scroller:toggleoverview
-bind = SUPER,L,           scroller:admitwindow
-bind = SUPER,Y,           scroller:expelwindow
+bind = SUPERSHIFT,bracketleft, scroller:setmode,       row
+bind = SUPERSHIFT,bracketright,scroller:setmode,       column
+bind = SUPER     ,bracketleft, scroller:admitwindow
+bind = SUPER     ,bracketright,scroller:expelwindow
+bind = SUPER     ,tab,         scroller:toggleoverview
 
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
