feat(home/hyprland): hyprscroller "jump" binds

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -188,6 +188,8 @@ xwayland {
 env = GDK_SCALE,1.25
 
 misc {
+    font_family                      = Iosevka Aile
+
     key_press_enables_dpms           = true
 
     enable_swallow                   = true
@@ -229,7 +231,8 @@ bind = SUPERSHIFT,bracketleft, scroller:setmode,       row
 bind = SUPERSHIFT,bracketright,scroller:setmode,       column
 bind = SUPER     ,bracketleft, scroller:admitwindow
 bind = SUPER     ,bracketright,scroller:expelwindow
-bind = SUPER     ,tab,         scroller:toggleoverview
+bind = SUPER     ,tab,         scroller:jump
+bind = SUPERSHIFT,tab,         scroller:toggleoverview
 
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
@@ -476,5 +479,8 @@ plugin {
         window_default_height = one
         column_widths         = onethird onehalf twothirds one
         window_heights        = onethird onehalf twothirds one
+
+        jump_labels_color     = 0xc5c8c6ff
+        jump_labels_scale     = 0.4
     }
 }
