--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -233,6 +233,7 @@ bind = SUPER     ,bracketleft, scroller:admitwindow
 bind = SUPER     ,bracketright,scroller:expelwindow
 bind = SUPER     ,tab,         scroller:jump
 bind = SUPERSHIFT,tab,         scroller:toggleoverview
+bind = SUPER,     backslash,   scroller:pin
 
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
