feat(home/hyprland): use homerow for hyprscroller jump keys

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -483,5 +483,6 @@ plugin {
 
         jump_labels_color     = 0xc5c8c6ff
         jump_labels_scale     = 0.4
+        jump_labels_keys      = arstneio
     }
 }
