feat(home/hyprland): hyprchroma
This plugin is scuffed, can't change transparency 😅.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -448,6 +448,9 @@ exec-once = $run playerctld daemon
 exec-once = $run gnome-keyring-daemon --start
 
 # Plugins
+windowrulev2 = plugin:chromakey,fullscreen:0
+chromakey_background = 29,31,33
+
 plugin {
     dynamic-cursors {
         enabled = true
