feat(home/hyprland): use my fork of hyprchroma

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -449,9 +449,14 @@ exec-once = $run gnome-keyring-daemon --start
 
 # Plugins
 windowrulev2 = plugin:chromakey,fullscreen:0
-chromakey_background = 29,31,33
 
 plugin {
+    chroma {
+        color      = 0x1d1f21
+        alpha      = 0.85
+        similarity = 0.01
+    }
+
     dynamic-cursors {
         enabled = true
         mode    = tilt
