--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -82,7 +82,7 @@ $crustAlpha = 181926
 #
 general {
     border_size             = 2
-    gaps_in                 = 0
+    gaps_in                 = 2
     gaps_out                = 6
 
     col.inactive_border     = rgba(00000000)
@@ -92,6 +92,10 @@ general {
     allow_tearing           = true
 
     layout                  = scroller
+
+    snap {
+         enabled = true
+    }
 }
 
 decoration {
@@ -187,6 +191,14 @@ xwayland {
 }
 env = GDK_SCALE,1.25
 
+cursor {
+    no_warps = true
+}
+
+render {
+    direct_scanout = true
+}
+
 misc {
     font_family                      = Iosevka Aile
 
@@ -196,11 +208,9 @@ misc {
     swallow_regex                    = Alacritty
     swallow_exception_regex          = dragon
 
+    mouse_move_focuses_monitor       = false
     new_window_takes_over_fullscreen = 2 # Un-fullscreen if another window is opened
-}
-
-binds {
-    workspace_center_on = 1 # Center cursor on last focused window when switching workspaces
+    initial_workspace_tracking       = 2 # Apply for children as well
 }
 
 # Keybinds
