--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -134,20 +134,17 @@ dwindle {
 }
 
 # Beziers
-# starts steep and levels out with a bump going slightly over 1 for `windows`
-bezier = overshot,0.1,0.7,0.1,1.1
-# almost-linear ease-in used with `fadein` in conjunction with `overshot` on `windows`
-bezier = easein,  0.1,0,  1,  1
-# steep, extreme ease-out curve for switching workspaces
-bezier = easeout, 0,  1,  0.5,1
+bezier = linear,  0,  0,  1,  1
+bezier = easein,  0.5,0,  1,  1
+bezier = easeout, 0,0.5,  0.5,1
 
 animations {
-    animation = windows,   1,4,overshot,slide
-    animation = windowsIn, 1,4,overshot,slide
-    animation = windowsOut,1,4,overshot,popin
-    animation = fade,      1,4,default
-    animation = border,    1,6,default
-    animation = workspaces,1,3,easeout, slidevert
+    animation = windows,   1,2,easein, slide
+    animation = windowsIn, 1,2,easein, slide
+    animation = windowsOut,1,2,easein, popin
+    animation = fade,      1,3,linear
+    animation = border,    1,2,linear
+    animation = workspaces,1,2,easeout,slidevert
 }
 
 input {
