feat(home/hyprland): use hyprscroller's touchpad gestures
README recommends not using Hyprland's built-in gesture system.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -178,10 +178,6 @@ device {
     resolve_binds_by_sym = 1
 }
 
-gestures {
-    workspace_swipe = true
-}
-
 # Scaling for XWayland
 xwayland {
     force_zero_scaling = true
@@ -491,13 +487,15 @@ plugin {
     }
     
     scroller {
-        column_default_width  = twothirds
-        window_default_height = one
-        column_widths         = onethird onehalf twothirds one
-        window_heights        = onethird onehalf twothirds one
+        column_default_width             = twothirds
+        window_default_height            = one
+        column_widths                    = onethird onehalf twothirds one
+        window_heights                   = onethird onehalf twothirds one
 
-        jump_labels_color     = 0xc5c8c6ff
-        jump_labels_scale     = 0.4
-        jump_labels_keys      = arstneio
+        jump_labels_color                = 0xc5c8c6ff
+        jump_labels_scale                = 0.4
+        jump_labels_keys                 = arstneio
+
+        gestures_workspace_switch_prefix = r
     }
 }
