--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -475,14 +475,12 @@ plugin {
         animate_workspacechange = yes
         focus_animation         = flash
 
-        # Taken from README example
-        bezier = realsmooth,0.28,0.29,.69,1.08
         flash {
             flash_opacity = 0.7
-            in_speed = 1.0
-            in_bezier = realsmooth
-            out_speed = 2.0
-            out_bezier = realsmooth
+            in_speed = 0.8
+            in_bezier = linear
+            out_speed = 1.0
+            out_bezier = linear
         }
     }
     
