--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -443,7 +443,7 @@ workspace = w[tg1],gapsout:0,border:2,rounding:0
 
 # Startup applications
 exec-once = $run swaybg -m fill -i ~/nc/pictures/wallpapers/0014.png
-exec-once = $run eww open bar --size "40x$(hyprctl monitors -j | jq -r '(.[0].height / .[0].scale) - 16')"
+exec-once = $run eww open bar --size "40x$(hyprctl monitors -j | jaq -r '(.[0].height / .[0].scale) - 16')"
 exec-once = [workspace special silent] $run alacritty
 exec-once = [float] $run keepassxc
 exec-once = $run mpd-mpris
