feat(home/emacs): use org-overdrive
My fork of inline-anki 🙃.

--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -54,6 +54,6 @@ fetch.github = "hakimel/reveal.js"
 src.git = "https://github.com/jdtsmith/org-modern-indent"
 fetch.github = "jdtsmith/org-modern-indent"
 
-[inline-anki]
-src.git = "https://github.com/meedstrom/inline-anki"
-fetch.github = "meedstrom/inline-anki"
+[org-overdrive]
+src.git = "https://github.com/skissue/org-overdrive"
+fetch.github = "skissue/org-overdrive"
