feat(home/hyprland): disable hyprscroller focus_wrap
Trippy with multiple monitors, since moving at the edge of a monitor just moves
to the next monitor.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -495,5 +495,6 @@ plugin {
         jump_labels_keys                 = arstneio
 
         gestures_workspace_switch_prefix = r
+        focus_wrap                       = false
     }
 }
