fix(home/hyprland): set misc:initial_workspace_tracking to 1
Else Alacritty keeps spawning on the special workspace cause I'm multiplexing it ¯\_(ツ)_/¯.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -203,7 +203,7 @@ misc {
 
     mouse_move_focuses_monitor       = false
     new_window_takes_over_fullscreen = 2 # Un-fullscreen if another window is opened
-    initial_workspace_tracking       = 2 # Apply for children as well
+    initial_workspace_tracking       = 1
 }
 
 # Keybinds
