--- a/home/alacritty/theme.toml
+++ b/home/alacritty/theme.toml
@@ -1,33 +1,30 @@
-# https://github.com/alacritty/alacritty-theme/blob/master/themes/tomorrow_night.toml
-# Colors (Tomorrow Night)
+# https://codeberg.org/anhsirk0/alacritty-themes/src/branch/main/themes/ef-owl.toml
 
-# Default colors
-[colors.primary]
-background = '#1d1f21'
-foreground = '#c5c8c6'
-
-[colors.cursor]
-text = '#1d1f21'
-cursor = '#ffffff'
-
-# Normal colors
+# Colors Ef-Owl
 [colors.normal]
-black   = '#1d1f21'
-red     = '#cc6666'
-green   = '#b5bd68'
-yellow  = '#e6c547'
-blue    = '#81a2be'
-magenta = '#b294bb'
-cyan    = '#70c0ba'
-white   = '#373b41'
-
-# Bright colors
+black = '#373b3d'
+red = '#d67869'
+green = '#70bb70'
+yellow = '#c09f6f'
+blue = '#80a4e0'
+magenta = '#e5a0ea'
+cyan = '#8fb8ea'
+white = '#d0d0d0'
 [colors.bright]
-black   = '#666666'
-red     = '#ff3334'
-green   = '#9ec400'
-yellow  = '#f0c674'
-blue    = '#81a2be'
-magenta = '#b77ee0'
-cyan    = '#54ced6'
-white   = '#282a2e'
+black = '#60676b'
+red = '#e4959f'
+green = '#60bd90'
+yellow = '#cf9f90'
+blue = '#72aff0'
+magenta = '#cfa0e8'
+cyan = '#7ac0b9'
+white = '#857f8f'
+[colors.cursor]
+cursor = '#afe6ef'
+text = '#292c2f'
+[colors.primary]
+background = '#292c2f'
+foreground = '#d0d0d0'
+[colors.selection]
+background = '#404f66'
+text = '#d0d0d0'
