feat(home/hyprland): enable new center_row_if_space_available option

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -488,5 +488,6 @@ plugin {
 
         gestures_workspace_switch_prefix = r
         focus_wrap                       = false
+        center_row_if_space_available    = true
     }
 }
