feat(home/hyprland): set default hyprscroller width to onehalf

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -477,7 +477,7 @@ plugin {
     }
     
     scroller {
-        column_default_width             = twothirds
+        column_default_width             = onehalf
         window_default_height            = one
         column_widths                    = onethird onehalf twothirds one
         window_heights                   = onethird onehalf twothirds one
