fix(home/hyprland): open steam maximized by default

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -435,6 +435,9 @@ windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
 
 windowrulev2 = immediate,class:(tetrio-desktop)
 
+# Hyprscroller rules
+windowrulev2 = plugin:scroller:columnwidth one,class:steam
+
 # Blur widgets
 layerrule = blur,bar
 
