feat(home/hyprland): simplify applications submap

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -380,21 +380,17 @@ bindr = SUPER,Super_L,exec,$run $LAUNCHER
 bindr = SUPER,Super_R,exec,$run $LAUNCHER
 bind  = SUPER,return ,exec,alacritty msg create-window || $run alacritty
 
-# Submap for focus-or-open
+$exitmap = && hyprctl dispatch submap reset
+
+# Submap for opening applications
 bind = SUPER,O,submap,applications
 
 submap = applications
 
-bind = ,B,exec,$run hyprland-focus-or-open zen-alpha zen
-bind = ,B,submap,reset
-bind = ,K,exec,[size 80% 80%] $run keepassxc
-bind = ,K,submap,reset
-bind = ,M,exec,alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp
-bind = ,M,submap,reset
-bind = ,G,exec,$run hyprland-focus-or-open signal signal-desktop
-bind = ,G,submap,reset
-bind = ,W,exec,$run hyprland-focus-or-open WebCord webcord
-bind = ,W,submap,reset
+bind = ,B,exec,$run zen $exitmap
+bind = ,K,exec,[size 80% 80%] $run keepassxc $exitmap
+bind = ,M,exec,alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp $exitmap
+bind = ,G,exec,$run signal-desktop $exitmap
 bind = ,catchall,submap,reset
 
 submap = reset
