--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -380,17 +380,17 @@ bindr = SUPER,Super_L,exec,$run $LAUNCHER
 bindr = SUPER,Super_R,exec,$run $LAUNCHER
 bind  = SUPER,return ,exec,alacritty msg create-window || $run alacritty
 
-$exitmap = && hyprctl dispatch submap reset
+$exitmap = hyprctl dispatch submap reset &&
 
 # Submap for opening applications
 bind = SUPER,O,submap,applications
 
 submap = applications
 
-bind = ,B,exec,$run zen $exitmap
-bind = ,K,exec,[size 80% 80%] $run keepassxc $exitmap
-bind = ,M,exec,alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp $exitmap
-bind = ,G,exec,$run signal-desktop $exitmap
+bind = ,B,exec,$exitmap $run zen
+bind = ,K,exec,[size 80% 80%] $exitmap $run keepassxc
+bind = ,M,exec,$exitmap alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp
+bind = ,G,exec,$exitmap $run signal-desktop
 bind = ,catchall,submap,reset
 
 submap = reset
@@ -400,15 +400,11 @@ bind = SUPER,F,submap,emacs
 
 submap = emacs
 
-bind = SUPER,F,exec,$run emacsclient -c -a 'emacs'
-bind = SUPER,F,submap,reset
+bind = SUPER,F,exec,$exitmap $run emacsclient -c -a 'emacs'
 
-bind = ,E,exec,$run emacsclient -c -e '(mu4e)'
-bind = ,E,submap,reset
-bind = ,A,exec,$run emacsclient -c -e '(org-agenda)'
-bind = ,A,submap,reset
-bind = ,P,exec,$run emacsclient -c -e "(call-interactively ##'project-switch-project)"
-bind = ,P,submap,reset
+bind = ,E,exec,$exitmap $run emacsclient -c -e '(mu4e)'
+bind = ,A,exec,$exitmap $run emacsclient -c -e '(org-agenda)'
+bind = ,P,exec,$exitmap $run emacsclient -c -e "(call-interactively ##'project-switch-project)"
 bind = ,catchall,submap,reset
 
 submap = reset
