--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -409,6 +409,19 @@ bind = ,catchall,submap,reset
 
 submap = reset
 
+# Hyprscroller marks submap
+bind = SUPER,apostrophe,submap,marks
+
+submap = marks
+
+bind = ,G,scroller:marksvisit,signal
+bind = ,G,submap,reset
+bind = ,B,scroller:marksvisit,browser
+bind = ,B,submap,reset
+bind = ,catchall,submap,reset
+
+submap = reset
+
 # Window rules
 #
 windowrulev2 = float,       class:org.keepassxc.KeePassXC
@@ -426,6 +439,7 @@ windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
 windowrulev2 = plugin:scroller:columnwidth one,     class:steam
 windowrulev2 = plugin:scroller:columnwidth onethird,class:signal
 windowrulev2 = plugin:scroller:marksadd signal,     class:signal
+windowrulev2 = plugin:scroller:marksadd browser,    initialClass:zen-beta
 
 # Blur widgets
 layerrule = blur,bar
