fix(home/hyprland): limit steam window rule to just main window

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -436,7 +436,7 @@ windowrulev2 = workspace special:minibuffer silent,class:emacs,title:MINIBUFFER
 windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
 
 # Hyprscroller rules
-windowrulev2 = plugin:scroller:columnwidth one,     class:steam
+windowrulev2 = plugin:scroller:columnwidth one,     class:steam,title:Steam
 windowrulev2 = plugin:scroller:columnwidth onethird,class:signal
 windowrulev2 = plugin:scroller:marksadd signal,     class:signal
 windowrulev2 = plugin:scroller:marksadd browser,    initialClass:zen-beta
