feat(home/hyprland): marks for steam

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -391,6 +391,7 @@ bind = ,B,exec,$exitmap $run zen
 bind = ,K,exec,[size 80% 80%] $exitmap $run keepassxc
 bind = ,M,exec,$exitmap alacritty msg create-window --class ncmpcpp -e ncmpcpp || $run alacritty -e ncmpcpp --class ncmpcpp
 bind = ,G,exec,$exitmap $run signal-desktop
+bind = ,S,exec,$exitmap $run steam
 bind = ,catchall,submap,reset
 
 submap = reset
@@ -418,6 +419,8 @@ bind = ,G,scroller:marksvisit,signal
 bind = ,G,submap,reset
 bind = ,B,scroller:marksvisit,browser
 bind = ,B,submap,reset
+bind = ,S,scroller:marksvisit,steam
+bind = ,S,submap,reset
 bind = ,catchall,submap,reset
 
 submap = reset
@@ -437,6 +440,7 @@ windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
 
 # Hyprscroller rules
 windowrulev2 = plugin:scroller:columnwidth one,     class:steam,title:Steam
+windowrulev2 = plugin:scroller:marksadd steam,      class:steam,title:Steam
 windowrulev2 = plugin:scroller:columnwidth onethird,class:signal
 windowrulev2 = plugin:scroller:marksadd signal,     class:signal
 windowrulev2 = plugin:scroller:marksadd browser,    initialClass:zen-beta
