--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -1,3 +1,7 @@
+[org-bleeding-latex]
+src.git = "https://code.tecosaur.net/tec/org-mode.git"
+fetch.git = "https://code.tecosaur.net/tec/org-mode.git"
+
 [typst-ts-mode]
 src.git = "https://git.sr.ht/~meow_king/typst-ts-mode"
 fetch.git = "https://git.sr.ht/~meow_king/typst-ts-mode"
