--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -45,3 +45,7 @@ fetch.github = "jdtsmith/org-modern-indent"
 [org-overdrive]
 src.git = "https://github.com/skissue/org-overdrive"
 fetch.github = "skissue/org-overdrive"
+
+[mpv-skipsilence]
+src.git = "https://codeberg.org/ferreum/mpv-skipsilence"
+fetch.git = "https://codeberg.org/ferreum/mpv-skipsilence"
