feat(home/hyprland): more blur

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -103,6 +103,14 @@ decoration {
 
     dim_special = 0.4
 
+    blur {
+        enabled = true
+        size    = 12
+        passes  = 2
+        popups  = true
+        special = true
+    }
+
     shadow {
         enabled = false
     }
