--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -442,9 +442,16 @@ windowrulev2 = float,       class:ncmpcpp
 windowrulev2 = size 80% 80%,class:ncmpcpp
 windowrulev2 = center,      class:ncmpcpp
 
+# Emacs
 windowrulev2 = float,class:emacs,title:MINIBUFFER
 windowrulev2 = workspace special:minibuffer silent,class:emacs,title:MINIBUFFER
 windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
+
+windowrulev2 = nofocus,class:emacs,initialTitle:\*transient\*
+windowrulev2 = float,class:emacs,initialTitle:\*transient\*
+windowrulev2 = size 45% 45%,class:emacs,initialTitle:\*transient\*
+windowrulev2 = move 55% 55%,class:emacs,initialTitle:\*transient\*
+windowrulev2 = animation slide bottom,class:emacs,initialTitle:\*transient\*
 
 # Hyprscroller rules
 windowrulev2 = plugin:scroller:columnwidth one,     class:steam,title:Steam
