fix(home/hyprland): pin popup transient frame

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -449,6 +449,7 @@ windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
 
 windowrulev2 = nofocus,class:emacs,initialTitle:\*transient\*
 windowrulev2 = float,class:emacs,initialTitle:\*transient\*
+windowrulev2 = pin,class:emacs,initialTitle:\*transient\*
 windowrulev2 = size 75% 40%,class:emacs,initialTitle:\*transient\*
 windowrulev2 = move 25% 60%,class:emacs,initialTitle:\*transient\*
 windowrulev2 = animation slide bottom,class:emacs,initialTitle:\*transient\*
