--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -443,9 +443,12 @@ windowrulev2 = size 80% 80%,class:ncmpcpp
 windowrulev2 = center,      class:ncmpcpp
 
 # Emacs
-windowrulev2 = float,class:emacs,title:MINIBUFFER
-windowrulev2 = workspace special:minibuffer silent,class:emacs,title:MINIBUFFER
-windowrulev2 = size 80% 80%,class:emacs,title:MINIBUFFER
+windowrulev2 = stayfocused,class:emacs,initialTitle:\*vertico\*
+windowrulev2 = float,class:emacs,initialTitle:\*vertico\*
+windowrulev2 = pin,class:emacs,initialTitle:\*vertico\*
+windowrulev2 = size 92% 40%,class:emacs,initialTitle:\*vertico\*
+windowrulev2 = move 100%-w-2% 100%-w-8,class:emacs,initialTitle:\*vertico\*
+windowrulev2 = animation slide bottom,class:emacs,initialTitle:\*vertico\*
 
 windowrulev2 = nofocus,class:emacs,initialTitle:\*transient\*
 windowrulev2 = float,class:emacs,initialTitle:\*transient\*
