feat(home/hyprland): disable animations for emacs popups
Too laggy on my laptop 😒.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -448,14 +448,14 @@ windowrulev2 = float,class:emacs,initialTitle:\*vertico\*
 windowrulev2 = pin,class:emacs,initialTitle:\*vertico\*
 windowrulev2 = size 92% 40%,class:emacs,initialTitle:\*vertico\*
 windowrulev2 = move 100%-w-2% 100%-w-8,class:emacs,initialTitle:\*vertico\*
-windowrulev2 = animation slide bottom,class:emacs,initialTitle:\*vertico\*
+windowrulev2 = noanim,class:emacs,initialTitle:\*vertico\*
 
 windowrulev2 = nofocus,class:emacs,initialTitle:\*transient\*
 windowrulev2 = float,class:emacs,initialTitle:\*transient\*
 windowrulev2 = pin,class:emacs,initialTitle:\*transient\*
 windowrulev2 = size 75% 40%,class:emacs,initialTitle:\*transient\*
 windowrulev2 = move 25% 60%,class:emacs,initialTitle:\*transient\*
-windowrulev2 = animation slide bottom,class:emacs,initialTitle:\*transient\*
+windowrulev2 = noanim,class:emacs,initialTitle:\*transient\*
 
 # Hyprscroller rules
 windowrulev2 = plugin:scroller:columnwidth one,     class:steam,title:Steam
