feat(home/hyprland): disable animations
Gonna try this out, see if animations are actually just bloat 🤭.

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -141,18 +141,12 @@ dwindle {
     default_split_ratio  = 1.1
 }
 
-# Beziers
-bezier = linear,  0,  0,  1,  1
-bezier = easein,  0.5,0,  1,  1
-bezier = easeout, 0,0.5,  0.5,1
-
 animations {
-    animation = windows,   1,1,  easein, slide
-    animation = windowsIn, 1,1.0,easein, slide
-    animation = windowsOut,1,1.5,easein, popin
-    animation = fade,      1,2,  linear
-    animation = border,    1,2,  linear
-    animation = workspaces,1,1,  easeout,slidevert
+    animation = windows,   0
+    animation = layers,    0
+    animation = fade,      0
+    animation = border,    0
+    animation = workspaces,0
 }
 
 input {
@@ -489,21 +483,6 @@ plugin {
         }
     }
 
-    hyprfocus {
-        enabled                 = yes
-        animate_floating        = yes
-        animate_workspacechange = yes
-        focus_animation         = flash
-
-        flash {
-            flash_opacity = 0.7
-            in_speed = 0.8
-            in_bezier = linear
-            out_speed = 1.0
-            out_bezier = linear
-        }
-    }
-    
     scroller {
         column_default_width             = onehalf
         window_default_height            = one
