fix(home/hyprland): passthrough embedded steno asterisk layout

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -180,6 +180,13 @@ device {
     resolve_binds_by_sym = 1
 }
 
+# It's a stenography keyboard
+device {
+    name = stenokeyboards-asterisk-(javelin)-keyboard
+    kb_variant =
+    resolve_binds_by_sym = 1
+}
+
 # Scaling for XWayland
 xwayland {
     force_zero_scaling = true
