fix(sources): set branch for org-bleeding-latex
I have no idea why it suddenly decided to start pulling a commit from 3 years
ago 💀.

--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -1,5 +1,6 @@
 [org-bleeding-latex]
 src.git = "https://code.tecosaur.net/tec/org-mode.git"
+src.branch = "dev"
 fetch.git = "https://code.tecosaur.net/tec/org-mode.git"
 
 [org-popup-posframe]
