fix(home/hyprland): stop grim selection from animating

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -464,6 +464,9 @@ windowrulev2 = plugin:scroller:marksadd browser,    initialClass:zen-beta
 # Blur widgets
 layerrule = blur,bar
 
+# Stop grim from animating (which gets captured in screenshots)
+layerrule = noanim,selection
+
 # Workspace rules
 workspace = w[tg1],gapsout:0,border:2,rounding:0
 
