--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -81,17 +81,19 @@ $crustAlpha = 181926
 # Basic Configuration
 #
 general {
-    border_size             = 2
-    gaps_in                 = 2
-    gaps_out                = 6
+    border_size         = 2
+    gaps_in             = 2
+    gaps_out            = 6
 
-    col.inactive_border     = rgba(00000000)
-    col.active_border       = $lavender
+    col.inactive_border = rgba(00000000)
+    col.active_border   = $lavender
 
-    resize_corner           = 3
-    allow_tearing           = true
+    resize_corner       = 3
+    allow_tearing       = true
 
-    layout                  = scroller
+    layout              = dwindle
+
+    no_focus_fallback   = true
 
     snap {
          enabled = true
@@ -155,6 +157,13 @@ input {
     }
 }
 
+dwindle {
+    pseudotile           = true
+    force_split          = 2
+    special_scale_factor = 0.9
+    default_split_ratio  = 0.9
+}
+
 # Firmware remapped
 device {
     name = moergo-glove80-left-keyboard
@@ -201,6 +210,8 @@ misc {
     mouse_move_focuses_monitor       = false
     new_window_takes_over_fullscreen = 2 # Un-fullscreen if another window is opened
     initial_workspace_tracking       = 1
+
+    animate_manual_resizes           = true
 }
 
 # Keybinds
@@ -213,27 +224,18 @@ bind = SUPERSHIFT,P,exec,hyprctl reload
 
 # Window Management
 # Switching focus
-bind = SUPER,N,scroller:movefocus,l
-bind = SUPER,E,scroller:movefocus,d
-bind = SUPER,U,scroller:movefocus,u
-bind = SUPER,I,scroller:movefocus,r
-bind = SUPER,B,scroller:movefocus,begin
-bind = SUPER,J,scroller:movefocus,end
+bind = SUPER,N,movefocus,l
+bind = SUPER,E,movefocus,d
+bind = SUPER,U,movefocus,u
+bind = SUPER,I,movefocus,r
+bind = SUPER,B,movefocus,begin
+bind = SUPER,J,movefocus,end
 
 # Moving windows
-bind = SUPERSHIFT,N,scroller:movewindow,l
-bind = SUPERSHIFT,E,scroller:movewindow,d
-bind = SUPERSHIFT,U,scroller:movewindow,u
-bind = SUPERSHIFT,I,scroller:movewindow,r
-
-# Managing tiling
-bind = SUPERSHIFT,bracketleft, scroller:setmode,       row
-bind = SUPERSHIFT,bracketright,scroller:setmode,       column
-bind = SUPER,     bracketleft, scroller:admitwindow
-bind = SUPER,     bracketright,scroller:expelwindow
-bind = SUPER,     tab,         scroller:jump
-bind = SUPERSHIFT,tab,         scroller:toggleoverview
-bind = SUPER,     backslash,   scroller:pin
+bind = SUPERSHIFT,N,movewindow,l
+bind = SUPERSHIFT,E,movewindow,d
+bind = SUPERSHIFT,U,movewindow,u
+bind = SUPERSHIFT,I,movewindow,r
 
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
@@ -268,41 +270,7 @@ binde = SHIFT,E,resizeactive,0 20
 binde = SHIFT,U,resizeactive,0 -20
 binde = SHIFT,I,resizeactive,20 0
 
-bind = ,M,           scroller:fitsize,active
-bind = ,M,           submap,reset
-bind = ,V,           scroller:fitsize,visible
-bind = ,V,           submap,reset
-bind = ,A,           scroller:fitsize,all
-bind = ,A,           submap,reset
-bind = ,bracketleft, scroller:fitsize,tobeg
-bind = ,bracketleft, submap,reset
-bind = ,bracketright,scroller:fitsize,toend
-bind = ,bracketright,submap,reset
-
 bind  = ,escape,submap,reset
-
-submap = reset
-
-# Changing row/column size
-bind = SUPER,minus,scroller:cyclesize,prev
-bind = SUPER,equal,scroller:cyclesize,next
-
-# Column alignment
-bind = SUPER,L,submap,align
-
-submap = align
-
-bind = ,N,scroller:alignwindow,left
-bind = ,N,submap,reset
-bind = ,E,scroller:alignwindow,down
-bind = ,E,submap,reset
-bind = ,U,scroller:alignwindow,up
-bind = ,U,submap,reset
-bind = ,I,scroller:alignwindow,right
-bind = ,I,submap,reset
-bind = ,comma,scroller:alignwindow,center
-bind = ,comma,submap,reset
-bind = ,catchall,submap,reset
 
 submap = reset
 
@@ -407,21 +375,6 @@ bind = ,catchall,submap,reset
 
 submap = reset
 
-# Hyprscroller marks submap
-bind = SUPER,apostrophe,submap,marks
-
-submap = marks
-
-bind = ,G,scroller:marksvisit,signal
-bind = ,G,submap,reset
-bind = ,B,scroller:marksvisit,browser
-bind = ,B,submap,reset
-bind = ,S,scroller:marksvisit,steam
-bind = ,S,submap,reset
-bind = ,catchall,submap,reset
-
-submap = reset
-
 # Window rules
 #
 windowrulev2 = float,       class:org.keepassxc.KeePassXC
@@ -445,13 +398,6 @@ windowrulev2 = pin,class:emacs,initialTitle:\*transient\*
 windowrulev2 = size 75% 40%,class:emacs,initialTitle:\*transient\*
 windowrulev2 = move 25% 60%,class:emacs,initialTitle:\*transient\*
 windowrulev2 = noanim,class:emacs,initialTitle:\*transient\*
-
-# Hyprscroller rules
-windowrulev2 = plugin:scroller:columnwidth one,     class:steam,title:Steam
-windowrulev2 = plugin:scroller:marksadd steam,      class:steam,title:Steam
-windowrulev2 = plugin:scroller:columnwidth onethird,class:signal
-windowrulev2 = plugin:scroller:marksadd signal,     class:signal
-windowrulev2 = plugin:scroller:marksadd browser,    initialClass:zen-beta
 
 # Blur widgets
 layerrule = blur,bar
@@ -479,20 +425,5 @@ plugin {
         tilt {
             limit = 4000
         }
-    }
-
-    scroller {
-        column_default_width             = onehalf
-        window_default_height            = one
-        column_widths                    = onethird onehalf twothirds one
-        window_heights                   = onethird onehalf twothirds one
-
-        jump_labels_color                = 0xc5c8c6ff
-        jump_labels_scale                = 0.4
-        jump_labels_keys                 = arstneio
-
-        gestures_workspace_switch_prefix = r
-        focus_wrap                       = false
-        center_row_if_space_available    = true
     }
 }
