feat(home/hyprland): proper groups configuration

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -85,8 +85,8 @@ general {
     gaps_in             = 2
     gaps_out            = 6
 
-    col.inactive_border = rgba(00000000)
     col.active_border   = $lavender
+    col.inactive_border = rgba(00000000)
 
     resize_corner       = 3
     allow_tearing       = true
@@ -139,6 +139,23 @@ animations {
 	animation = layers,     1,2.5,windowIn,      slide
 }
 
+group {
+    col.border_active   = $lavender
+    col.border_inactive = rgba(00000000)
+
+    
+    groupbar {
+        enabled = true
+        font_size = 14
+        height = 10
+        rounding = 0
+        gradients = true
+        indicator_height = 2
+        col.inactive = $base
+        col.active = $overlay0
+    }
+}
+
 input {
     # Separate keyboard/mouse focus
     follow_mouse  = 3
@@ -155,6 +172,11 @@ input {
         natural_scroll = true
         scroll_factor  = 0.5
     }
+}
+
+binds {
+    workspace_back_and_forth         = true
+    hide_special_on_workspace_change = true
 }
 
 dwindle {
@@ -232,10 +254,17 @@ bind = SUPER,B,movefocus,begin
 bind = SUPER,J,movefocus,end
 
 # Moving windows
-bind = SUPERSHIFT,N,movewindow,l
-bind = SUPERSHIFT,E,movewindow,d
-bind = SUPERSHIFT,U,movewindow,u
-bind = SUPERSHIFT,I,movewindow,r
+bind = SUPERSHIFT,N,movewindoworgroup,l
+bind = SUPERSHIFT,E,movewindoworgroup,d
+bind = SUPERSHIFT,U,movewindoworgroup,u
+bind = SUPERSHIFT,I,movewindoworgroup,r
+
+# Managing tiling
+bind = SUPER,     G,togglegroup
+bind = SUPER,     L,changegroupactive,b
+bind = SUPER,     Y,changegroupactive,f
+bind = SUPERSHIFT,L,movegroupwindow,b
+bind = SUPERSHIFT,Y,movegroupwindow,f
 
 # Switch focus via interactive menu
 bind = SUPER,space,exec,hyprland-window-selector
