feat(home/hyprland): workspace touch gestures

--- a/home/hyprland/hyprland.conf
+++ b/home/hyprland/hyprland.conf
@@ -179,6 +179,11 @@ binds {
     hide_special_on_workspace_change = true
 }
 
+gestures {
+    workspace_swipe        = true
+    workspace_swipe_invert = true
+}
+
 dwindle {
     pseudotile           = true
     force_split          = 2
