--- a/system/desktop/kanata/config
+++ b/system/desktop/kanata/config
@@ -4,11 +4,11 @@
  linux-dev-names-exclude ("MoErgo Glove80 Left Keyboard"))
 
 (defsrc
- q w e r t y u i o p
- a s d f g h j k l ;
- z x c v b n m)
+      q w e r t y u i o p
+ caps a s d f g h j k l ;
+      z x c v b n m)
 
 (deflayer base
-          q w f p b j l u y ;
-          a r s t g m n e i o
-          x c d v z k h)
+     q w f p b j l u y ;
+ esc a r s t g m n e i o
+     x c d v z k h)
